Wed Apr  7 2004  Joe ALlen <jhallen@world.std.com>
	* scrn.c, bw.c:

	Fix highlighting bug: pointer was not always at start of line.

	Assume terminal supports color if it looks like an ansi terminal
	(this should really be an option).

Tue Apr  6 2004  Joe Allen <jhallen@world.std.com>
	* Makefile.am, bw.c, configure.ac, joerc.in, rc.c, scrn.c,
	scrn.h, syntax.c, syntax.h, c.jsf.in, perl.jsf.in, verilog.jsf.in:

	Clean up meaning of default color.

	Allow syntax to be specified in joerc file: "-syntax perl"

	Add class definitions to syntax files.

	Add perl and verilog definitions (they need work).

	Change joerc to assume files with . in their name do not want word
	wrap enabled (except for .txt).

Thu Apr  1 2004  Joe Allen <jhallen@world.std.com>
	* scrn.c:
	Fix color handling for terminals which do not use my defaults :-)
	Basically we revert to the default text color, use ESC [ 0 m, not
	ESC [ 37 m and ESC [ 40 m.

Tue Mar 30 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c, syntax.c, syntax.h, types.h, bw.c:
	Next steps for syntax highlighting: 
		Now there is a real parser, so syntax files
		can be defined (although, it only loads
		the C language c.jsf for now).

		The line length limit has been eliminated.

		It should be faster for large files: we start
		parsing only 50 lines back when you hit PgUp,
		not from the start of file each time.

		Todo: update other windows, allow files of
		other types to be highlighted, create user interface
		to allow region names to be assigned colors, create
		more syntax files.  Possibly create program to
		convert regex NFA to joe DFA syntax file format.

Wed Mar 24 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c:
	Fix bug where hitting ^Z on first word of file caused joe to lock up


Wed Mar 24 2004  Joe Allen <jhallen@world.std.com>
	* lots of file:
	First steps at syntax highlighting!
	This version has support for C only (and the parser is a big hack),
	and only if all lines in the file are less than 1K.